# c-two

./: .cloc.ignore  .env.example  .env_example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  benchmark_results.tsv  benchmark_results_256mb.tsv  benchmark_results_2gb.tsv  main.py  pyproject.toml  test.py
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: check_version.py  (+1 more)
benchmarks/: _relay_full_server.py  _relay_server.py  adaptive_buffer_benchmark.py  chunked_benchmark.py  concurrency_benchmark.py  detailed_results.json  hold_vs_view_benchmark.py  ipc_asymmetric.py  ipc_cost_breakdown.py  ipc_p0_regression.py  ipc_shm_pool_benchmark.py  ipc_split_vs_unified.py  ipc_v2_vs_v3_benchmark.py  ipc_v3_detailed_bench.py  kostya_ctwo_benchmark.py  kostya_ray_benchmark.py  memory_benchmark.py  memory_vs_ipc_v3_bench.py  plan.md  ray_echo_benchmark.py  relay_qps_benchmark.py  results.json  results_ipcv2.json  results_ipcv2_latency.json  rpc_v2_vs_v1_benchmark.py  run_kostya_sweep.sh  segment_size_benchmark.py  thread_vs_ipc_benchmark.py  three_mode_benchmark.py  wire_preencoding_benchmark.py
cli/: Cargo.toml  README.md  install-c3.sh
cli/src/: contract.rs  main.rs  registry.rs  relay.rs
cli/tests/: cli_help.rs  contract_commands.rs  registry_commands.rs  relay_args.rs
core/: Cargo.toml
core/bridge/c2-ffi/: Cargo.toml
core/bridge/c2-ffi/src/: client_ffi.rs  error_ffi.rs  lib.rs  mem_ffi.rs  relay_ffi.rs  shm_buffer.rs
core/foundation/c2-codegen/: Cargo.toml
core/foundation/c2-codegen/src/: lib.rs
core/foundation/c2-codegen/tests/: typescript.rs
core/foundation/c2-contract/: Cargo.toml
core/foundation/c2-contract/src/: lib.rs
core/foundation/c2-error/: Cargo.toml
core/foundation/c2-error/src/: lib.rs
core/foundation/c2-mem-ffi/: Cargo.toml
core/foundation/c2-mem-ffi/bindings/typescript/: .gitignore  README.md  package.json  tsconfig.json
core/foundation/c2-mem-ffi/bindings/typescript/native/: node_c2_mem_ffi_loader.c
core/foundation/c2-mem-ffi/bindings/typescript/scripts/: build-node-addon.mjs  build-runtime.mjs  build-rust.mjs  build-types.mjs  cargo-tools.mjs  check-consumer-install.mjs  check-pack.mjs  pack-check.mjs  test-node-addon.mjs  tsc-tools.mjs
core/foundation/c2-mem-ffi/bindings/typescript/src/: index.ts  node-shims.d.ts
core/foundation/c2-mem-ffi/bindings/typescript/tests/: c2-mem-ffi-binding.test.mjs  c2-mem-ffi-node-loader.test.mjs  c2-mem-ffi-pack-check.test.mjs
core/foundation/c2-mem-ffi/include/: c2_mem_ffi.h
core/foundation/c2-mem-ffi/src/: lib.rs
core/foundation/c2-mem/src/: dedicated.rs  pool.rs
core/foundation/c2-mem/src/alloc/: buddy.rs  spinlock.rs
core/protocol/c2-wire/src/: frame.rs  lib.rs  tests.rs
core/protocol/c2-wire/src/chunk/: promote.rs
core/transport/c2-http/: Cargo.toml
core/transport/c2-http/src/: main.rs
core/transport/c2-http/src/client/: mod.rs
core/transport/c2-http/src/relay/: authority.rs  background.rs  conn_pool.rs  disseminator.rs  route_table.rs  router.rs  server.rs  state.rs  types.rs
core/transport/c2-ipc/src/: pool.rs  sync_client.rs
core/transport/c2-server/src/: connection.rs  heartbeat.rs  lib.rs  server.rs
doc/: bench-general.md  fix-prompt.md  ipc-v3-optimization-report.md  memory-pressure-backpressure.md  ru-op2.md  sota.md
docs/: architecture-review-v030.md  memory-pressure-backpressure.md  roadmap.md  roadmap.zh-CN.md
examples/: README.md  client.py  crm.py  crm_process.py  example_addresses.py  icrm.py  local.py  relay_client.py  relay_server.py  server.py  v2_client.py  v2_grid_server.py  v2_http_client.py  v2_local.py  v2_relay_server.py  v2_relay_standalone.py  v2_server.py
rust/c2_buddy/: Cargo.toml  README.md
rust/c2_buddy/src/: allocator.rs  bitmap.rs  ffi.rs  lib.rs  pool.rs  segment.rs  spinlock.rs
scripts/: generate_proto.py
sdk/python/native/: Cargo.toml
sdk/python/native/src/: client_ffi.rs  lib.rs  response_backing.rs  runtime_session_ffi.rs  server_ffi.rs  wire_ffi.rs  writable_sink.rs
src/c_two/_native/bridge/c2-ffi/: Cargo.toml
src/c_two/_native/bridge/c2-ffi/src/: client_ffi.rs  http_ffi.rs  lib.rs  mem_ffi.rs  relay_ffi.rs  server_ffi.rs  shm_buffer.rs
src/c_two/_native/c2-chunk/: Cargo.toml
src/c_two/_native/c2-chunk/src/: config.rs  lib.rs  promote.rs  registry.rs
src/c_two/_native/c2-ffi/: Cargo.toml
src/c_two/_native/c2-ffi/src/: buddy_ffi.rs  client_ffi.rs  lib.rs  mem_ffi.rs  relay_ffi.rs  server_ffi.rs  shm_buffer.rs  wire_ffi.rs
src/c_two/_native/c2-http/: Cargo.toml
src/c_two/_native/c2-http/src/: client.rs  lib.rs
src/c_two/_native/c2-ipc/: Cargo.toml
src/c_two/_native/c2-ipc/src/: client.rs  lib.rs  pool.rs  response.rs  sync_client.rs  tests.rs
src/c_two/_native/c2-server/: Cargo.toml
src/c_two/_native/c2-server/src/: config.rs  connection.rs  dispatcher.rs  heartbeat.rs  lib.rs  server.rs
src/c_two/_native/protocol/c2-chunk/: Cargo.toml
src/c_two/_native/protocol/c2-chunk/src/: registry.rs
src/c_two/_native/transport/c2-http/: Cargo.toml
src/c_two/_native/transport/c2-http/src/: lib.rs  main.rs  pool.rs
src/c_two/_native/transport/c2-http/src/client/: client.rs  pool.rs
src/c_two/_native/transport/c2-http/src/relay/: background.rs  disseminator.rs  mod.rs  peer.rs  peer_handlers.rs  route_table.rs  router.rs  server.rs  state.rs  types.rs
src/c_two/_native/transport/c2-ipc/: Cargo.toml
src/c_two/_native/transport/c2-ipc/src/: client.rs  response.rs  shm.rs  sync_client.rs  tests.rs
src/c_two/_native/transport/c2-relay/: Cargo.toml
src/c_two/_native/transport/c2-relay/src/: server.rs
src/c_two/_native/transport/c2-server/: Cargo.toml
src/c_two/_native/transport/c2-server/src/: connection.rs  dispatcher.rs  scheduler.rs  server.rs
test/: __init__.py  wrapper.py
tests/: README.md  component.test.py  conftest.py  crm.test.py  crm_launcher.py  hello.py  ihello.py  localize.test.py  server.test.py  template.test.py  thread.test.py
tests/seed/: README.md  crm.py  icrm.py  main.py  pyproject.toml
(+593 files in other folders)
