[project]
name = "c-two-workspace"
version = "0.0.0"
description = "Workspace root for C-Two."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "c-two",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "numpy>=2.2.4",
    "pandas>=2.2.0",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
]
examples = [
    "numpy>=2.2.4",
    "pandas>=2.2.0",
    "pyarrow>=23.0.1",
]
benchmark = [
    "numpy>=2.2.4",
    # Ray does not currently publish a macOS aarch64 CPython 3.14t wheel.
    "ray>=2.55.0; python_version < '3.14'",
]

[tool.uv]
package = false
cache-keys = [
    { file = "pyproject.toml" },
    { file = "sdk/python/pyproject.toml" },
    { file = "sdk/python/native/Cargo.toml" },
    { file = "sdk/python/native/Cargo.lock" },
    { file = "sdk/python/native/**/*.rs" },
    { file = "core/**/*.rs" },
    { file = "core/**/Cargo.toml" },
]

[tool.uv.sources]
c-two = { workspace = true }
fastdb4py = { path = "../fastdb", editable = true }

[tool.uv.workspace]
members = ["sdk/python"]

[tool.pytest.ini_options]
testpaths = ["sdk/python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
