[workspace]
resolver = "2"
members = [
    "foundation/c2-contract",
    "foundation/c2-config",
    "foundation/c2-codegen",
    "foundation/c2-error",
    "foundation/c2-mem",
    "foundation/c2-mem-ffi",
    "protocol/c2-wire",
    "transport/c2-ipc",
    "transport/c2-http",
    "transport/c2-server",
    "runtime/c2-runtime",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
