[package]
name = "c2-buddy"
version = "0.1.0"
edition = "2024"
description = "Cross-process buddy allocator over POSIX shared memory for C-Two IPC v3"

[lib]
name = "c2_buddy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
