[package]
name = "c2-ffi"
edition.workspace = true
version.workspace = true
description = "PyO3 bindings for C-Two native extensions (memory pool + HTTP relay)"

[lib]
name = "c2_ffi"
crate-type = ["cdylib", "lib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
c2-config = { path = "../c2-config" }
c2-mem = { path = "../c2-mem" }
c2-wire = { path = "../c2-wire" }
c2-relay = { path = "../c2-relay" }
c2-ipc = { path = "../c2-ipc" }
c2-http = { path = "../c2-http" }
c2-server = { path = "../c2-server" }
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
