[package]
name = "c2-http"
edition.workspace = true
version.workspace = true
description = "HTTP client for C-Two relay transport"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
thiserror = "2"
