[package]
name = "c2-ipc"
edition.workspace = true
version.workspace = true
description = "Async IPC client for C-Two relay"

[dependencies]
c2-wire = { path = "../c2-wire" }
c2-mem = { path = "../c2-mem" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "io-util", "time"] }
libc = "0.2"
