[package]
name = "c2-chunk"
edition.workspace = true
version.workspace = true
description = "Chunk reassembly lifecycle management for C-Two IPC transport"

[dependencies]
c2-config = { path = "../../foundation/c2-config" }
c2-mem = { path = "../../foundation/c2-mem" }
c2-wire = { path = "../c2-wire" }
tracing = "0.1"
