[package]
name = "c2-ipc"
edition.workspace = true
version.workspace = true
description = "Async IPC client for C-Two relay"

[dependencies]
c2-config = { path = "../../foundation/c2-config" }
c2-wire = { path = "../../protocol/c2-wire" }
c2-mem = { path = "../../foundation/c2-mem" }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "io-util", "time"] }
libc = "0.2"
