[package]
name = "c2-relay"
edition.workspace = true
version.workspace = true
description = "HTTP relay server for C-Two (axum → IPC)"

[dependencies]
c2-config = { path = "../../foundation/c2-config" }
c2-wire = { path = "../../protocol/c2-wire" }
c2-ipc = { path = "../c2-ipc" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
